--- a/index.html
+++ b/index.html
@@ -5,25 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orbitall</title>
     <!-- Favicon -->
-        <link rel="shortcut icon" href="../../assets/img/Favicon.png" type="image/x-icon">
+        <link rel="shortcut icon" href="assets/img/Favicon.png" type="image/x-icon">
     <!-- CSS -->
         <!-- Universal -->
-         <link rel="stylesheet" href="../../assets/css/Universal.css">
+         <link rel="stylesheet" href="assets/css/Universal.css">
         <!-- Específico -->
-         <link rel="stylesheet" href="../../assets/css/inicio.css">
+         <link rel="stylesheet" href="assets/css/inicio.css">
 </head>
 <body>
     <header>
         <nav>
             <div class="logo">
-                <img src="../../assets/img/Orbitall Logo.png" alt="logo">
+                <img src="assets/img/Orbitall Logo.png" alt="logo">
             </div>
             <div class="menu">
                 <ul>
                     <li><a href="index.html" style="color: #ffde59;">Início</a></li>
-                    <li><a href="../sobre/index.html">Sobre</a></li>
-                    <li><a href="../login/index.html">Login</a></li>
-                    <li><a href="../cadastro/index.html">Cadastro</a></li>
+                    <li><a href="views/sobre/index.html">Sobre</a></li>
+                    <li><a href="views/login/index.html">Login</a></li>
+                    <li><a href="views/cadastro/index.html">Cadastro</a></li>
                 </ul>
             </div>
         </nav>
@@ -36,14 +36,14 @@
     <main>
         <section class="system">
             <div class="img1">
-                <img src="../../assets/img/sistemasolar.jpg" alt="sistema solar">
+                <img src="assets/img/sistemasolar.jpg" alt="sistema solar">
             </div>
             <div class="text1">
                 <p class="h2">Sistema Solar</p>
                 <p>Conheça mais sobre o nosso sistema solar</p>
                 <p>Aprenda mais sobre os planetas do nosso sistema</p>
                 <p>Sobre os astros ao nosso redor e muito mais</p>
-                <button><a href="../login/index.html">Saiba Mais</a></button>
+                <button><a href="views/login/index.html">Saiba Mais</a></button>
             </div>
         </section>
         <section class="astros">
@@ -52,10 +52,10 @@
                 <p>Descubra curiosidades sobre os astros do nosso sistema solar</p>
                 <p>Desde a Lua ao Sol</p>
                 <p>Desde pequenos planetas à Luas incríveis</p>
-                <button><a href="../login/index.html">Saiba Mais</a></button>
+                <button><a href="views/login/index.html">Saiba Mais</a></button>
             </div>
             <div class="img2">
-                <img src="../../assets/img/corpos_celestes.jpg" alt="astros">
+                <img src="assets/img/corpos_celestes.jpg" alt="astros">
             </div>
         </section>
         <section class="banner">
